# DirectNeuralBiasing

./: .gitignore  README.md  config.yaml  pyproject.toml  run.py  smoke_test.py
_archive/cpplib/: CMakeLists.txt  README-setup-incomplete.md
_archive/cpplib-build/: CMakeLists.txt  Dockerfile  build.sh
_archive/cpplib-build/Cerelink/CBSDK-7.6.1-win64/include/: cbhwlib.h
_archive/cpplib-build/Cerelink/CBSDK-7.6.1-win64/lib64/: cbsdk_static.lib
_archive/cpplib-build/src/: config_reader.h
_archive/cpplib/build-files/: config.yaml
_archive/cpplib/src/: buffer_manager.h  config_reader.h  logger.h
_archive/rustlib/: Cargo.toml  README.md
_archive/rustlib/config/: config.yaml
_archive/rustlib/examples/: cpp_logging_example.cpp
_archive/rustlib/include/: signal_processor.h
_archive/rustlib/src/: main.rs
_archive/test/: TODO.md  cl_DetectSW.m  config.yaml  plot_TP_FP_rates.ipynb  test_slow_wave_detection.ipynb
_archive/test/data/: README.txt  (+7 more)
cpplib/: .gitignore  BlackrockNSP.sln  ClosedLoopC++.sln
cpplib/BlackrockNSP/: BlackrockNSP.vcxproj
cpplib/ClosedLoopC++/: .gitignore  ClosedLoopC++.vcxproj  ClosedLoopC++.vcxproj.filters  Source.cpp  cbsdkx64.lib
dnb/: __init__.py  config.py
dnb/core/: __init__.py  ring_buffer.py  types.py
dnb/engine/: __init__.py  event_bus.py  pipeline.py
dnb/modules/: __init__.py  amplitude_monitor.py  audio_stim.py  base.py  downsampler.py  stim_scheduler.py  stim_trigger.py  target_wave_detector.py  twave_detector.py  wavelet.py
dnb/sources/: __init__.py  base.py  file.py  live.py
dnb/validation/: README.md  ground_truth.py  synthetic.py
docs/cbSDK Examples/: Continuous.cpp  ReadComments.cpp  Time.cpp
python-lib/: README.md  test-file.py
python-lib/_archive/: process.py
python-lib/src/: __init__.py
rustlib/: Cargo.toml
rustlib/src/: lib.rs
src/: run.py
src/_archive/: stream.py
src/cpplib/: .gitignore  CMakeLists.txt  README.md
src/cpplib-build/: .dockerignore
src/cpplib/BlackrockNSP/: BlackrockNSP.vcxproj  Source.cpp  cbhwlib.h  main.cpp
src/cpplib/BlackrockNSP/Test/: TestRoutines.cpp
src/cpplib/src/: cbhwlib.h  data_logger.h  main-archive.cpp  main.cpp  pstdint.h
src/cpplib/src/_archive/: cpplib.lnk
src/cpplib/src/examples/: continuous-dnh-2025-edit.cpp  continuous-fixed-nov-25.cpp
src/dnb/: __init__.py  config.py  logging_config.py
src/pythonlib/: .gitignore  README.md  blackrock-ns6.ipynb  direct-nerual-biasing-demo-0.6.4.ipynb  direct-nerual-biasing-demo-0.6.5.ipynb  direct-nerual-biasing-demo-0.6.x.ipynb  direct-neural-biasing-demo-0.10.x.ipynb  direct-neural-biasing-demo-0.6.x.ipynb  direct-neural-biasing-demo-0.7.x.ipynb  direct-neural-biasing-demo-0.8.x.ipynb  direct-neural-biasing-demo-0.9.x.ipynb  dnb-scipy-test-scratch.ipynb  dnb.pyd  fitting_cosines.ipynb  generate_dummy_signals.ipynb  generate_test_waveform.ipynb  publish.yml  pyproject.toml  python-module-test_0.4.0.ipynb  read_raw_data_binary.ipynb  scipy-test-scratch.ipynb  test-file.ipynb  test-file.py
src/pythonlib/.ipynb_checkpoints/: blackrock-ns6-checkpoint.ipynb
src/pythonlib/_archive/: direct-neural-biasing-demo-0.6.x.ipynb
src/pythonlib/_archive/esoterica/: read_raw_data_binary.ipynb
src/pythonlib/_archive/esoterica/_archive/: python-module-test_0.5.0.ipynb
src/pythonlib/_archive/esoterica/cerelink/: cerelink-not-working.ipynb
src/pythonlib/esoterica/_archive/: blackrock-ns6_old_python_module_0.3.3.ipynb
src/pythonlib/src/: dnb-scipy-test-scratch.ipynb
src/pythonlib/src/.ipynb_checkpoints/: dnb-scipy-test-scratch-checkpoint.ipynb
src/pythonlib/src/dnb/: __init__.py  filters.cp311-win_amd64.pyd  logging_config.py
src/pythonlib/src/dnb/core/: __init__.py  ring_buffer.py  types.py
src/pythonlib/src/dnb/engine/: __init__.py  event_bus.py  pipeline.py
src/pythonlib/src/dnb/io/: __init__.py  reader.py  writer.py
src/pythonlib/src/dnb/modules/: __init__.py  audio_stim.py  base.py  detector.py  slow_wave.py  wavelet.py
src/pythonlib/src/dnb/sources/: __init__.py  base.py  cerebus.py  file.py  nplay.py
src/pythonlib/tests/: test-file.ipynb  test-live-cerebus.ipynb  test-live-nplay.ipynb  test-validation-synthetic.ipynb  test_modules.py  test_pipeline.py  test_ring_buffer.py
src/rustlib/: .gitignore  Cargo.toml  README.md
src/rustlib/config/: config.yaml
src/rustlib/src/: client.rs  lib.rs  main.rs
src/rustlib/src/bindings/: cpp.rs  mod.rs  python.rs
src/rustlib/src/bindings/_archive/: cpp.rs
src/rustlib/src/blackrock_functions/: blackrock_filters.rs
src/rustlib/src/config/: config.yaml  mod.rs
src/rustlib/src/cpplib/: blackrock_filters.rs  mod.rs
src/rustlib/src/filters/: bandpass.rs  bandpass_cascaded.rs  mod.rs
src/rustlib/src/local/: client.rs  log.txt  mod.rs  process_file.rs  server.rs
src/rustlib/src/local/_archive/: server-archive.rs
src/rustlib/src/processing/: _laurent_archive_process_signal.rs  mod.rs  process_signal.rs  python.rs  signal_processor.rs  slow_wave.rs
src/rustlib/src/processing/_archive/: _laurent_archive_process_signal.rs  slow_wav_2024_05_28.rs  slow_wave.rs  slow_wave_2024_09_16.rs
src/rustlib/src/processing/detectors/: mod.rs  slow_wave.rs  threshold.rs  threshold_detector.rs  wave_peak.rs
src/rustlib/src/processing/detectors/_archive/: slow_wave.rs
src/rustlib/src/processing/filters/: bandpass.rs  mod.rs
src/rustlib/src/processing/triggers/: mod.rs  pulse.rs  pulse_trigger.rs
src/rustlib/src/python_functions/: mod.rs  py03.rs
src/rustlib/src/pythonlib/: py03.rs
src/rustlib/src/scripts/: generate_rustdoc.py
src/rustlib/src/test/: blackrock.rs  mod.rs
src/rustlib/src/tests/: blackrock_test.rs
src/rustlib/src/utils/: log.rs
test/: .gitignore  OLD_test_slow_wave_detection.ipynb  config.yaml  grid_search_cli.py  matlab_matched_config.yaml  optimisation.ipynb  optimise_cli.py  test_slow_wave_detection.ipynb
test/results/: optuna_study.db
test/results-500trial-arxiv/: best_optuna_params.json
tests/: .gitattributes  offline-smoke-tests.ipynb  test_data.py  trace_timing.py
validation/: README.md  batch-processing.ipynb
(+63 files in other folders)
