[package]
name = "direct-neural-biasing"
version = "0.4.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rand = "0.8.4"
colored = "2.0.4"
csv = "1.1"
rayon = "1.5.1"

[build-dependencies]
maturin = "1.2.3"

[[bin]]
name = "main"
path = "src/main.rs"

# this breaks it for some reason
[lib]
name = "direct_neural_biasing"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "direct-neural-biasing"
rustc-extra-args = ["--cfg", "feature=\"python-extension\""]
