[package]
name = "direct-neural-biasing"
version = "0.7.5"
authors = ["Daniel Humphries <d.humphries@ucl.ac.uk>"]
# description = "A Rust library with Python and C++ bindings for low-latency, closed-loop neuroscience research."
license = "CC-BY-NC-4.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rand = "0.8.4"
colored = "2.0.4"
csv = "1.1"
rayon = "1.5.1"

[build-dependencies]
maturin = "1.5.1"

[[bin]]
name = "main"
path = "src/main.rs"

# this breaks it for some reason
[lib]
name = "direct_neural_biasing"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "direct-neural-biasing"
summary = "A Rust library with Python and C++ bindings for low-latency, closed-loop neuroscience research."
rustc-extra-args = ["--cfg", "feature=\"python-extension\""]
