[package]
name = "direct-neural-biasing"
version = "1.0.5"
authors = ["Daniel Humphries <d.humphries@ucl.ac.uk>"]
# description = "A Rust library with Python and C++ bindings for low-latency, closed-loop neuroscience research."
license = "CC-BY-NC-4.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
rand = "0.8.4"
colored = "2.0.4"
csv = "1.1"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
maturin = { version = "1.5.1", optional = true }

[features]
# Define a 'python' feature to include Python bindings
default = ["python"]
python = ["pyo3", "maturin"]

cpp = [] # Exclude Python bindings when building for C++

[[bin]]
name = "main"
path = "src/main.rs"

# this breaks the python build it for some reason - but i think i maybe need it for something else
# [lib]
# name = "direct_neural_biasing"
# crate-type = ["cdylib"]

[profile.release]
opt-level = "z" # Optimize for binary size, helpful for DLLs
panic = "abort" # Reduce overhead by not including unwinding code for panics
lto = true      # Link-time optimization

# Static linking for Windows (MinGW or MSVC)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "winuser", "fileapi"] }

# [target.x86_64-pc-windows-gnu]
# rustflags = ["-C", "target-feature=+crt-static"]

[package.metadata.maturin]
name = "direct-neural-biasing"
summary = "A Rust library with Python and C++ bindings for low-latency, closed-loop neuroscience research."
